welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not found: value Case
var Case.Couleur = Color.white
    ^SlugSnail:6: error: not found: value CaseCouleur
	CaseCouleur=getCouleurSol();
        ^SlugSnail:23: error: not found: value Case
  	if (getCouleurSol()==Case.Couleur) {
                             ^