welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
var couleur = false
var Case.Couleur = Color.white
def hunt(c:Color) {
  avance();
	CaseCouleur=getCouleurSol();
  recule();
  while (estSurBiscuit()==false) {
  	isFacingTrail();
    if (couleur==true){
      avance();
    }
  	
  }
     
}



def isFacingTrail():Boolean = { 
	if (estFaceMur==false) {
		avance();
  	if (getCouleurSol()==Case.Couleur) {
  		recule();
    	couleur = true;
  	
    	}
    	else { 
      	recule();
  			couleur = false
      }   
 	}
  else gauche()
  return couleur  
}